@@ -128,6 +128,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - MagikSF                Sjoerd van Leent
 - MapBasic               Tomasz Berus
 - mIRC                   Alberto de Areba Sánchez
+- Modula 2               Benjamin Kowarsch
 - Modula-3               Martin Bishop
 - MPASM                  Bakalex
 - MXML                   David Spurr
